[tool.poetry]
name = "bwiseth-infra"
version = "0.1.0"
description = "Common infrastructure for bwiseth microservice architecture."
authors = ["Oscar Gil <hello@oscargilbalaguer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
